# sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  TODO.md  _config.yml  buildfile  conanfile.py  conanfile.txt  imgui.ini  libsbx.prof  log.txt  lsan.supp  packages.manifest  repositories.manifest  sandbox.cpp  sandbox.sln  setup.sh  temp.hpp  thread_pool.hpp
demo/: CMakeLists.txt  README.md  application.hpp  asset_container.hpp  asset_manager.hpp  buffer.hpp  buildfile  button.cpp  button.hpp  callback_container.hpp  command_buffer.hpp  command_pool.hpp  configuration.hpp  container.hpp  context.hpp  demo.cpp  device.hpp  engine.hpp  enumerate.hpp  event_manager.hpp  events.hpp  extentions.hpp  fence.hpp  framebuffers.hpp  hash.hpp  hashed_string.hpp  input.hpp  instance.hpp  json_document.hpp  json_node.hpp  json_parser.hpp  json_serializer.hpp  json_tokenizer.hpp  key.cpp  key.hpp  listener_handle.hpp  logger.hpp  logical_device.hpp  manifest  model.hpp  (+15 more)
demo/assets/: io.txt  t.json
demo/config/: app.json  init.json
demo/demo/: application.cpp  application.hpp  buildfile  camera_controller.hpp  debug_subrenderer.hpp  demo.cpp  demo_application.cpp  demo_application.hpp  demo_camera_controller.hpp  demo_renderer.cpp  demo_renderer.hpp  distance.hpp  grid_subrenderer.hpp  length.hpp  line.cpp  line.hpp  mass.hpp  player_controller.hpp  quantity.hpp  renderer.cpp  renderer.hpp  time.hpp  velocity.hpp  wight.hpp
dependencies/: CMakeLists.txt
libsbx-assets/: CMakeLists.txt  README.md
libsbx-async/: CMakeLists.txt  README.md  manifest
libsbx-audio/: CMakeLists.txt  README.md
libsbx-bitmaps/: CMakeLists.txt  README.md
libsbx-containers/: CMakeLists.txt  README.md
libsbx-containers/tests/: CMakeLists.txt  tests.cpp
libsbx-core/: CMakeLists.txt  README.md  buildfile  manifest
libsbx-devices/: CMakeLists.txt  README.md  manifest
libsbx-ecs/: CMakeLists.txt  README.md  manifest
libsbx-ecs/tests/: CMakeLists.txt  tests.cpp
libsbx-editor/: CMakeLists.txt
libsbx-gizmos/: CMakeLists.txt  README.md
libsbx-graphics/: CHANGELOG.md  CMakeLists.txt  README.md  manifest
libsbx-io/: CMakeLists.txt  README.md  manifest
libsbx-math/: CMakeLists.txt  README.md  manifest
libsbx-math/tests/: CMakeLists.txt  angle_tests.hpp  math_tests.cpp  matrix4x4_tests.hpp  quaternion_tests.hpp  tests.cpp  vector2_tests.hpp  vector3_tests.hpp  vector4_tests.hpp
libsbx-memory/: CMakeLists.txt  README.md  manifest
libsbx-models/: CMakeLists.txt
libsbx-physics/: CMakeLists.txt  README.md
libsbx-physics/tests/: CMakeLists.txt
libsbx-scene/: CMakeLists.txt
libsbx-scenes/: CMakeLists.txt  README.md  manifest
libsbx-scenes/tests/: CMakeLists.txt  tests.cpp
libsbx-scripting/: CMakeLists.txt  README.md  manifest
libsbx-signal/: CMakeLists.txt  README.md  manifest
libsbx-signal/tests/: .gitignore
libsbx-signals/: CMakeLists.txt
libsbx-ui/: CMakeLists.txt  README.md
libsbx-utility/: CMakeLists.txt  buildfile  manifest
libsbx-utility/tests/: .gitignore
object_pool/: CMakeLists.txt  object_pool.hpp  resource_handle.hpp  resource_pool.hpp
sandbox/: CMakeLists.txt
sandbox/application/: CMakeLists.txt  application.hpp  events.hpp  input_codes.hpp  input_system.cpp  input_system.hpp  keys.hpp  update_system.cpp  update_system.hpp  window_module.cpp  window_module.hpp
sandbox/async/: CMakeLists.txt  async.cpp  async.hpp  synced_queue.hpp  thread_pool.cpp  thread_pool.hpp
sandbox/container/: CMakeLists.txt  container.hpp  dynamic_bitset.cpp  dynamic_bitset.hpp  sparse_set.hpp  sparse_set.inl
sandbox/core/: CMakeLists.txt  base_resource.hpp  basic_context.cpp  basic_context.hpp  camera.cpp  camera.hpp  constants.hpp  core.cpp  core.hpp  engine.cpp  engine.hpp  entry_point.cpp  entry_point.hpp  event_queue.cpp  event_queue.hpp  events.hpp  file_utils.cpp  file_utils.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  input_modifiers.hpp  key.hpp  logger.cpp  logger.hpp  mash_loader.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_loader.hpp  model_loader.cpp  model_loader.hpp  modification_flag.hpp  module.cpp  module.hpp  mouse_button.hpp  object.hpp  perspective_camer.hpp  perspective_camera.cpp  (+21 more)
sandbox/ecs/: CMakeLists.txt  component.hpp  component_container.hpp  component_container.inl  component_map.hpp  component_map.inl  component_storage.hpp  component_storage.inl  ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  entity.inl  entity_set.cpp  entity_set.hpp  entity_set.inl  entity_traits.hpp  entity_traits.inl  event_queue.hpp  iterable_storage.hpp  process.hpp  process.inl  registry.cpp  registry.hpp  registry.inl  scene.hpp  scheduler.hpp  sparse_set.cpp  sparse_set.hpp  sparse_set.inl  storage.hpp  storage.inl  system.cpp  system.hpp  type_index.hpp  types.hpp  view.hpp  view.inl
sandbox/engine/: CMakeLists.txt  engine.cpp  engine.hpp
sandbox/entry/: CMakeLists.txt  entry.cpp  entry.hpp
sandbox/evtsys/: CMakeLists.txt  event.cpp  event.hpp  event_listener.hpp  event_queue.cpp  event_queue.hpp  key_codes.hpp  key_event.cpp  key_event.hpp  key_event_listener.hpp  mouse_buttons.hpp  mouse_event.cpp  mouse_event.hpp  mouse_event_listener.hpp  window_event.cpp  window_event.hpp  window_event_listener.hpp
sandbox/gfx/: CMakeLists.txt  context.cpp  context.hpp
sandbox/io/: CMakeLists.txt  file_reader.hpp  io.hpp
sandbox/math/: CMakeLists.txt  angle.hpp  angle.inl  constants.hpp  functional.hpp  functional.inl  math.hpp  matrix4x4.hpp  matrix4x4.inl  quaternion.hpp  quaternion.inl  vector2.cpp  vector2.hpp  vector2.inl  vector2_inl.hpp  vector3.cpp  vector3.hpp  vector3.inl  vector3_inl.hpp  vector4.cpp  vector4.hpp  vector4.inl  vector4_inl.hpp
sandbox/memory/: CMakeLists.txt  aligned_storage.hpp  memory.hpp  pool_allocator.hpp  pool_storage.hpp  typeless_pool.hpp
sandbox/meta/: CMakeLists.txt  concepts.hpp  meta.hpp  type_guards.hpp
sandbox/physics/: CMakeLists.txt  constants.hpp  (+5 more)
task_graph/: CMakeLists.txt  basic_task_graph.hpp  object_pool.hpp  task_graph.hpp  uuid.hpp
tests/: CMakeLists.txt  test.cpp
(+1159 files in other folders)
